# civ

game/: Cargo.toml
game/src/: draw.rs  lib.rs  util.rs
game/src/assets/: mod.rs
game/src/states/: game.rs  loading.rs  map_editor.rs  mod.rs  transition.rs
main/: Cargo.toml
main/src/: main.rs
scale/: Cargo.toml
scale/src/: main.rs
