[package]
name = "rustgame"
version = "0.1.0"
authors = ["Damien Radtke <damienradtke@gmail.com>"]

[dependencies]
allegro            = "0.0.32"
allegro_font       = "0.0.32"
allegro_image      = "0.0.32"
allegro_primitives = "0.0.32"
libloading         = "0.3"

[dependencies.game]
path = "../game"
